--- a/Nomad/View Controllers/Entries/AddEntryViewController.xib
+++ b/Nomad/View Controllers/Entries/AddEntryViewController.xib
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9059" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
@@ -15,6 +15,7 @@
                 <outlet property="photoImageView" destination="QYp-5L-Kn9" id="B5J-db-38O"/>
                 <outlet property="photoLable" destination="vpY-xq-BYI" id="aQt-dt-8fR"/>
                 <outlet property="selectImageFromPhotoLibrary" destination="SYo-g6-nYs" id="TrM-rI-Bvd"/>
+                <outlet property="titleTextBox" destination="wSf-7H-nTL" id="hRi-Ds-IdQ"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -25,58 +26,55 @@
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Entry Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WyC-Hk-hDq">
                     <rect key="frame" x="8" y="34" width="78" height="21"/>
-                    <animations/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Decription" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ioj-Da-YbD">
                     <rect key="frame" x="7" y="98" width="80" height="21"/>
-                    <animations/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Description on this Entry" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="ZpU-EF-mlT">
                     <rect key="frame" x="7" y="127" width="584" height="120"/>
-                    <animations/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences" spellCheckingType="yes" keyboardAppearance="light" returnKeyType="done"/>
                 </textField>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Image" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vpY-xq-BYI">
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Image" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vpY-xq-BYI">
                     <rect key="frame" x="8" y="255" width="47" height="21"/>
-                    <animations/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Entry Title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wSf-7H-nTL">
                     <rect key="frame" x="8" y="60" width="584" height="30"/>
-                    <animations/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits"/>
                 </textField>
-                <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" placeholderIntrinsicWidth="320" placeholderIntrinsicHeight="320" image="defaultPhoto" translatesAutoresizingMaskIntoConstraints="NO" id="QYp-5L-Kn9">
+                <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" placeholderIntrinsicWidth="320" placeholderIntrinsicHeight="320" image="defaultPhoto" translatesAutoresizingMaskIntoConstraints="NO" id="QYp-5L-Kn9">
                     <rect key="frame" x="7" y="284" width="300" height="300"/>
-                    <animations/>
                     <gestureRecognizers/>
                     <constraints>
                         <constraint firstAttribute="width" secondItem="QYp-5L-Kn9" secondAttribute="height" multiplier="53:28" id="fqn-2q-1gq"/>
+                        <constraint firstAttribute="width" secondItem="QYp-5L-Kn9" secondAttribute="height" multiplier="1:1" id="nAi-bj-00k"/>
                     </constraints>
                     <connections>
                         <outletCollection property="gestureRecognizers" destination="SYo-g6-nYs" appends="YES" id="5it-mp-I1g"/>
                     </connections>
                 </imageView>
             </subviews>
-            <animations/>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstAttribute="bottomMargin" secondItem="wSf-7H-nTL" secondAttribute="bottom" constant="8" id="0jW-lq-GHh"/>
                 <constraint firstItem="WyC-Hk-hDq" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="72" id="Hj2-Vg-CvR"/>
                 <constraint firstItem="wSf-7H-nTL" firstAttribute="top" secondItem="WyC-Hk-hDq" secondAttribute="bottom" constant="8" id="N1V-3M-gfO"/>
                 <constraint firstItem="wSf-7H-nTL" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leadingMargin" constant="8" id="bLe-qA-875"/>
+                <constraint firstItem="QYp-5L-Kn9" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="bvA-Xt-rKH"/>
                 <constraint firstItem="WyC-Hk-hDq" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leadingMargin" constant="8" id="c4T-w9-CMC"/>
                 <constraint firstItem="wSf-7H-nTL" firstAttribute="top" secondItem="WyC-Hk-hDq" secondAttribute="bottom" constant="8" id="dzG-Wf-zVV"/>
+                <constraint firstItem="QYp-5L-Kn9" firstAttribute="top" secondItem="vpY-xq-BYI" secondAttribute="bottom" constant="12" id="gJc-dR-7Qw"/>
+                <constraint firstAttribute="bottom" secondItem="QYp-5L-Kn9" secondAttribute="bottom" id="z6G-DZ-6Bq"/>
             </constraints>
         </view>
         <tapGestureRecognizer id="SYo-g6-nYs">
