--- a/Nomad/View Controllers/MapViewController.xib
+++ b/Nomad/View Controllers/MapViewController.xib
@@ -6,6 +6,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MapViewController" customModule="Nomad" customModuleProvider="target">
             <connections>
+                <outlet property="mapView" destination="Dh4-Ih-Aeq" id="QRV-i1-azd"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
