--- a/Nomad/View Controllers/Trips/AddTripViewController.xib
+++ b/Nomad/View Controllers/Trips/AddTripViewController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9532" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
     </dependencies>
@@ -7,7 +7,9 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="AddTripViewController" customModule="Nomad" customModuleProvider="target">
             <connections>
                 <outlet property="titleTextBox" destination="xsO-uc-hgC" id="9ND-Sq-uAb"/>
+                <outlet property="travelerTitleLabel" destination="tJ3-lE-Ddt" id="I4i-Y6-u8N"/>
                 <outlet property="travelersTextBox" destination="sSo-LQ-Nw6" id="v5w-C4-FKJ"/>
+                <outlet property="tripTitleLabel" destination="Mr5-tQ-qZl" id="LGs-4j-drq"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
